--- a/SimpleCalculator/pom.xml
+++ b/SimpleCalculator/pom.xml
@@ -24,6 +24,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/au.com.dius.pact.consumer/junit -->
+<dependency>
+    <groupId>au.com.dius.pact.consumer</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.2.0</version>
+</dependency>
+
     <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core-java8 -->
 <dependency>
     <groupId>org.assertj</groupId>
